[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_flycam = "0.7.0"
bracket-noise = "0.8.2"
bevy-inspector-egui = "0.11.0"
bevy_screen_diags = "0.4.0"
threadpool = "1.8.1"

[profile.dev]
opt-level = 1